2010-05-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#165767 Calling screen UI is displayed in inverted view
		  while changing screen mode

	* src/tidy/tidy-blur-group.c (tidy_blur_group_paint)
	* src/tidy/tidy-cached-group.c (tidy_cached_group_paint):
	  The inversion was caused by a conflict between TidyCachedGroup
	  and TidyBlurGroup, in particular because cogl_draw_buffer()
	  does not save nor restore the ModelView matrix, but overrides
	  it with the identify matrix if going from FBO to FBO.  So save
	  and restore the matrix before/after switching buffers.

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Attempt to stack animas correctly.  If we fail to do so then when you
	restart hd while imageviewer is running you'll get a nice black screen
	in FSM because the background is stacked above the fullscreen image.
	Do this by recognizing transiency, which was broken as well (when an
	anima is parented somewhere libhildon makes it transient).

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#146110 Partial image is displayed in FSM while viewing images
		  sometimes

	Possibly we didn't honor the client's geometry request so the anima
	was cropped.

	* src/mb/hd-animation-actor.c (hd_animation_actor_request_geometry):
	  Now always accept the requested geometry but make sure it's off
	  the screen.
	* src/mb/hd-animation-actor.c (hd_animation_actor_init):
	  Don't allow the layout manager to move the client around.
	  Also don't install useless buttonclick handlers for the decor.
	  (If it had a decor to start with.)

2010-03-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Implement rotation synchronization between the wm and its clients.
	Previously we only had this damage_timeout mechanism but it's been
	impossible to find a value that's good for everyone.  Now listen
	for requests from the clients and be willing to wait some more
	(up to damage_timeout_max) if it takes them time to redraw.